[package]
name = "keystone"
version = "0.9.2"
authors = [
  "Remco Verhoef <remco.verhoef@dutchcoders.io>",
  "Tasuku SUENAGA a.k.a. gunyarakun <tasuku-s-github@titech.ac>"
]
description = "Rust bindings for the keystone-engine"
license = "GPL-2.0"
readme = "README.md"
repository = "https://github.com/keystone-engine/keystone"
include = [
  "src/*", "tests/*", "Cargo.toml", "COPYING", "README.md"
]

[dependencies]
libc = "0.2"
keystone-sys = { path = "keystone-sys", version = "0.9.2" }

[features]
default = []

use_system_keystone = ["keystone-sys/use_system_keystone"]
build_keystone_cmake = ["keystone-sys/build_keystone_cmake"]

[workspace]
