[package]
name = "keystone-sys"
version = "0.9.0"
authors = [
  "Remco Verhoef <remco.verhoef@dutchcoders.io>",
  "Tasuku SUENAGA a.k.a. gunyarakun <tasuku-s-github@titech.ac>"
]
description = "Rust bindings for the keystone assembler"
repository = "https://github.com/keystone-engine/keystone"
documentation = "https://docs.rs/keystone/"
license = "GPL-2.0"
build = "build.rs"
exclude = [
  "keystone/build/**"
]

[build-dependencies]
build-helper = "0.1"
os_type = "2.0"
pkg-config = { optional = true, version = "0.3" }

[dependencies]
bitflags = "1.0"
libc = "0.2"

[features]
default = []

use_system_keystone = ["pkg-config"]
build_keystone_cmake = []
