[package]
name = "keystone-sys"
version = "0.9.2"
authors = [
  "Remco Verhoef <remco.verhoef@dutchcoders.io>",
  "Tasuku SUENAGA a.k.a. gunyarakun <tasuku-s-github@titech.ac>"
]
description = "Rust bindings for the keystone assembler"
repository = "https://github.com/keystone-engine/keystone"
documentation = "https://docs.rs/keystone/"
license = "GPL-2.0"
build = "build.rs"

[build-dependencies]
pkg-config = { optional = true, version = "0.3" }
cmake = { optional = true, version = "0.1" }

[dependencies]
bitflags = "1.0"
libc = "0.2"

[features]
default = ["build_keystone_cmake"]

use_system_keystone = ["pkg-config"]
build_keystone_cmake = ["cmake"]
