[package]
name = "kstool-cli"
version = "0.1.0"
edition = "2021"
description = "Quick assembler using keystone-engine for CTF"
license = "MIT"

[[bin]]
name = "kstool"
path = "src/main.rs"

[dependencies]
keystone = { version = "0.10", path = "../", default-features = false }
argh = "0.1"

[features]
default = ["use_system"]
use_system = ["keystone/use_system_keystone"]
use_cmake = ["keystone/build_keystone_cmake"]
